# subaru-telemetry-client

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python-tests.yml
src/subaru/sts/client/: __init__.py  datum.py  radio.py
tests/: test_datum.py  test_radio.py
